Add user, change password, delete items, trunk fields.

--- a/app/styles/cms.scss
+++ b/app/styles/cms.scss
@@ -170,3 +170,14 @@ button {
     color: #f44;
   }
 }
+
+.settings {
+  input {
+    width: 200px !important;
+    padding: 0.5em;
+    font-size: 1em;
+    vertical-align: middle;
+    margin-right: 1em;
+  }
+}
+
