--- a/app/styles/cms.scss
+++ b/app/styles/cms.scss
@@ -181,3 +181,23 @@ button {
   }
 }
 
+.admin-table {
+  div {
+    width: 1em;
+    height: 1em;
+    text-align: center;
+    line-height: 1em;
+    background: #eee;
+    border-radius: 3px;
+    color: #888;
+    cursor: pointer;
+  }
+}
+
+hr {
+  margin: 2em 0;
+  height: 1px;
+  border: none;
+  background: #eee;
+}
+
